--- a/atlas/home.html
+++ b/atlas/home.html
@@ -54,7 +54,32 @@
 
 
   <!--Arxh footer-->
-  <nav class="navbar navbar-expand-lg  fixed-bottom navbar-dark bg-dark ">
+  <div class="footer-with-columns">
+    <div class="row d-flex justify-content-center">
+      <div class="col-sm-3">
+        <div class="justify-content-start">
+          <p class="text-white">Copyright&nbspAtlas&nbsp2019</p>
+        </div>
+      </div>
+      <div class="col-sm-6"></div>
+      <div class="col-sm-3">
+        <div class="navbar-text">
+        <a href="https://www.facebook.com/%CE%91%CE%B8%CE%BB%CE%B7%CF%84%CE%B9%CE%BA%CE%AE-%CE%91%CE%BA%CE%B1%CE%B4%CE%B7%CE%BC%CE%AF%CE%B1-%CE%86%CF%84%CE%BB%CE%B1%CF%82-%CE%92%CF%8C%CE%BB%CE%BF%CF%85-1141029355971821/"> <i class="fab fa-facebook-square fa-lg"></i></a>
+        </div>
+        <div class="navbar-text pl-2 ">
+        <a href="http://m.me/1141029355971821"><i class="fab fa-facebook-messenger fa-lg"></i></a>
+        </div>
+        <div class="navbar-text pl-2">
+        <a href="mailto:atlas.volou.2016@gmail.com"><i class="fas fa-envelope fa-lg"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--Telos footer-->
+
+
+  <!--Arxh footer-->
+  <!-- <nav class="navbar navbar-expand-lg  fixed-bottom navbar-dark bg-dark ">
       <div class="container">
         <div class="navbar-text  justify-content-start">
           <p class="text-white">Copyright&nbspAtlas&nbsp2019</p>
@@ -71,7 +96,7 @@
         </div>
         </div>
       </div>
-  </nav>
+  </nav> -->
   <!--Telos footer-->
 
     <!-- Optional JavaScript -->
